force-app/main/default/objects/Account/fields/ASU_Geomarket_Code__c.field-meta.xml
<CustomField>
    <fullName>ASU_Geomarket_Code__c</fullName>
    <description>[??] - is maintained by import and defined by Admission Services.  It breaks ASU’s target market into more geographic areas (still several zipcodes but finer definition than what CollegeBoard assigns, AZ is broken into 10 or 11 AZ Geomarkets).</description>
    <label>ASU Geomarket Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>