force-app/main/default/objects/Account/fields/ATP_Code__c.field-meta.xml
<CustomField>
    <fullName>ATP_Code__c</fullName>
    <description>[??] - American Testing Program (ATP) Code is a set of numbers used for standardized testing such as SAT and ACT. A CEEB code is a standardized ID number that is assigned to a high school, college, or university. CEEB codes are issued by the Educational Testing Service (ETS). These 4- to 6-digit codes are mostly used in college entrance exams such as the SAT and ACT.</description>
    <inlineHelpText>American Testing Program (ATP) Code is a set of numbers used for standardized testing such as SAT and ACT. This field also represents the CEEB code by the Educational Testing Service.</inlineHelpText>
    <label>ATP Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>