force-app/main/default/objects/Account/fields/EOSS_Target__c.field-meta.xml
<CustomField>
    <fullName>EOSS_Target__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[??] - Educational Outreach and Student Services targeted school</description>
    <label>EOSS Target</label>
    <type>Checkbox</type>
</CustomField>