force-app/main/default/objects/Account/fields/External_Organization_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Organization_ID__c</fullName>
    <description>[??] - Organization for External ID</description>
    <externalId>true</externalId>
    <label>External Organization ID</label>
    <length>11</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>