force-app/main/default/objects/Account/fields/Facebook__c.field-meta.xml
<CustomField>
    <fullName>Facebook__c</fullName>
    <description>URL for the business account</description>
    <inlineHelpText>Facebook page for the business</inlineHelpText>
    <label>Facebook</label>
    <type>Url</type>
</CustomField>