force-app/main/default/objects/Account/fields/FICE_Code__c.field-meta.xml
<CustomField>
    <fullName>FICE_Code__c</fullName>
    <description>[??] - FICE code is an acronym for the Federal Interagency Committee on Education code. This is a six digit code that that is assigned to all institutions of higher learning in the United States of America.</description>
    <label>FICE Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>