force-app/main/default/objects/Account/fields/Geomarket_Code__c.field-meta.xml
<CustomField>
    <fullName>Geomarket_Code__c</fullName>
    <description>[??] - is maintained by Gene’s logic using the geomarket/zip relationship defined CollegeBoard, held in the SF key value table.  The Geomarket lumps several zips into a single code giving a broader geographical representation, there are 3 geomarkets assigned to the state of Arizona.</description>
    <label>Geomarket Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>