force-app/main/default/objects/Account/fields/Institution_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Institution_Effective_Date__c</fullName>
    <description>Date the institution was added to PeopleSoft</description>
    <label>Institution Effective Date</label>
    <type>Date</type>
</CustomField>