force-app/main/default/objects/Account/fields/Institution_Status__c.field-meta.xml
<CustomField>
    <fullName>Institution_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[??] -</description>
    <label>Institution Status</label>
    <type>Checkbox</type>
</CustomField>