force-app/main/default/objects/Account/fields/Institution_Type__c.field-meta.xml
<CustomField>
    <fullName>Institution_Type__c</fullName>
    <description>[Peoplesoft or manual] - Examples Include: 2YR, 4YR, HS, CC, COL, K8, NA, NTL, SCD, UKN, UNV, VOC</description>
    <label>Institution Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2YR</fullName>
            </value>
            <value>
                <fullName>4YR</fullName>
            </value>
            <value>
                <fullName>HS</fullName>
            </value>
            <value>
                <fullName>CC</fullName>
            </value>
            <value>
                <fullName>COL</fullName>
            </value>
            <value>
                <fullName>K8</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>NTL</fullName>
            </value>
            <value>
                <fullName>SCD</fullName>
            </value>
            <value>
                <fullName>UKN</fullName>
            </value>
            <value>
                <fullName>UNV</fullName>
            </value>
            <value>
                <fullName>VOC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>