force-app/main/default/objects/Account/fields/Linkedin__c.field-meta.xml
<CustomField>
    <fullName>Linkedin__c</fullName>
    <description>URL for the business account</description>
    <inlineHelpText>Linkedin page for the business</inlineHelpText>
    <label>Linkedin</label>
    <type>Url</type>
</CustomField>