force-app/main/default/objects/Account/fields/me3_Institution__c.field-meta.xml
<CustomField>
    <fullName>me3_Institution__c</fullName>
    <description>me3 HS id</description>
    <label>me3 Institution</label>
    <length>7</length>
    <type>Text</type>
</CustomField>