force-app/main/default/objects/Account/fields/Organization_or_Person__c.field-meta.xml
<CustomField>
    <fullName>Organization_or_Person__c</fullName>
    <label>Organization or Person</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Organization</fullName>
            </value>
            <value>
                <fullName>Person</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>