force-app/main/default/objects/Account/fields/Previous_Territory_Manager_ID__c.field-meta.xml
<CustomField>
    <fullName>Previous_Territory_Manager_ID__c</fullName>
    <label>Previous Territory Manager ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>