force-app/main/default/objects/Account/fields/Research_Centers_and_Consortiums__c.field-meta.xml
<CustomField>
    <fullName>Research_Centers_and_Consortiums__c</fullName>
    <description>[manual entry] - allows user to select the research center that is tied to the account.</description>
    <label>Research Centers and Consortiums</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adaptive, Intelligent, Materials, System</fullName>
            </value>
            <value>
                <fullName>Advanced Technology Environments</fullName>
            </value>
            <value>
                <fullName>Advanced Technology Innovation Center</fullName>
            </value>
            <value>
                <fullName>Algae Testbed Public-Private Partnership</fullName>
            </value>
            <value>
                <fullName>Arizona Initiative for Renewable Energy</fullName>
            </value>
            <value>
                <fullName>Arizona Institute for Nano-Electronics</fullName>
            </value>
            <value>
                <fullName>AZ Cen for Algae Technology &amp; Innovation</fullName>
            </value>
            <value>
                <fullName>Cen for Solid State Electronics Research</fullName>
            </value>
            <value>
                <fullName>Cen of Renewable Energy Electrochemistry</fullName>
            </value>
            <value>
                <fullName>Center for Adaptive Neural Systems</fullName>
            </value>
            <value>
                <fullName>Center for Applied Nanoionics</fullName>
            </value>
            <value>
                <fullName>Center for Bioelectronics and Biosensors</fullName>
            </value>
            <value>
                <fullName>Center for Biosignatures Discovery Auto</fullName>
            </value>
            <value>
                <fullName>Center for Cognitive Ubiquitous Compu</fullName>
            </value>
            <value>
                <fullName>Center for Computational Nanoscience</fullName>
            </value>
            <value>
                <fullName>Center for Cybersecurity and Digital Forensics</fullName>
            </value>
            <value>
                <fullName>Center for Earth Systems Engineering</fullName>
            </value>
            <value>
                <fullName>Center for Embedded Systems</fullName>
            </value>
            <value>
                <fullName>Center for Environmental Fluid Dynamics</fullName>
            </value>
            <value>
                <fullName>Center for Environmental Security</fullName>
            </value>
            <value>
                <fullName>Center for Negative Carbon Emissions</fullName>
            </value>
            <value>
                <fullName>Center for Photonics Innovation</fullName>
            </value>
            <value>
                <fullName>Center for Sustainable Health</fullName>
            </value>
            <value>
                <fullName>Center of Excellence on SMART Innovation</fullName>
            </value>
            <value>
                <fullName>Connection One</fullName>
            </value>
            <value>
                <fullName>Cybersecurity Education Consortium</fullName>
            </value>
            <value>
                <fullName>Decision Theater</fullName>
            </value>
            <value>
                <fullName>Flexible Display Center</fullName>
            </value>
            <value>
                <fullName>Information Assurance Center</fullName>
            </value>
            <value>
                <fullName>LeRoy Eyring for Solid State Science</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>