force-app/main/default/objects/Account/fields/SSB_CRMSYSTEM_ACCT_ID__c.field-meta.xml
<CustomField>
    <fullName>SSB_CRMSYSTEM_ACCT_ID__c</fullName>
    <description>MDM Account ID</description>
    <externalId>true</externalId>
    <label>MDM Account ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>