force-app/main/default/objects/Account/fields/SSB_CRMSYSTEM_Athletics_Flag__c.field-meta.xml
<CustomField>
    <fullName>SSB_CRMSYSTEM_Athletics_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MDM Athletics IDs</description>
    <label>MDM Athletics Flag</label>
    <type>Checkbox</type>
</CustomField>