force-app/main/default/objects/Account/fields/SSB_CRMSYSTEM_DimCustIDs__c.field-meta.xml
<CustomField>
    <fullName>SSB_CRMSYSTEM_DimCustIDs__c</fullName>
    <description>MDM Customer IDs</description>
    <label>MDM Customer IDs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>