force-app/main/default/objects/Account/fields/SSB_CRMSYSTEM_Foundation_Flag__c.field-meta.xml
<CustomField>
    <fullName>SSB_CRMSYSTEM_Foundation_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MDM Foundation Flag</description>
    <label>MDM Foundation Flag</label>
    <type>Checkbox</type>
</CustomField>