force-app/main/default/objects/Account/fields/SSB_CRMSYSTEM_Foundation_IDs__c.field-meta.xml
<CustomField>
    <fullName>SSB_CRMSYSTEM_Foundation_IDs__c</fullName>
    <description>MDM Foundation IDs</description>
    <label>MDM Foundation IDs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>