force-app/main/default/objects/Account/fields/SSB_CRMSYSTEM_PeopleSoft_Flag__c.field-meta.xml
<CustomField>
    <fullName>SSB_CRMSYSTEM_PeopleSoft_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MDM Peoplesoft Flag</description>
    <label>MDM Peoplesoft Flag</label>
    <type>Checkbox</type>
</CustomField>