force-app/main/default/objects/Account/fields/SSB_CRMSYSTEM_SSID_Winner__c.field-meta.xml
<CustomField>
    <fullName>SSB_CRMSYSTEM_SSID_Winner__c</fullName>
    <description>MDM SSID Winner</description>
    <label>MDM SSID Winner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>