force-app/main/default/objects/Account/fields/Subindustry__c.field-meta.xml
<CustomField>
    <fullName>Subindustry__c</fullName>
    <description>Dependent on the Industry field. Further categorizes a business description.</description>
    <label>Subindustry</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Industry</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Farming and Ranching</fullName>
            </value>
            <value>
                <fullName>Fishing, Hunting, Trapping</fullName>
            </value>
            <value>
                <fullName>Forestry and Logging</fullName>
            </value>
            <value>
                <fullName>Apparel Wholesalers</fullName>
            </value>
            <value>
                <fullName>Clothing and Shoe Stores</fullName>
            </value>
            <value>
                <fullName>Department Stores</fullName>
            </value>
            <value>
                <fullName>Textiles, Apparel and Accessories</fullName>
            </value>
            <value>
                <fullName>Banks</fullName>
            </value>
            <value>
                <fullName>Credit Cards and Related Services</fullName>
            </value>
            <value>
                <fullName>Lending and Mortgage</fullName>
            </value>
            <value>
                <fullName>Personal Financial Planning and Private Banking</fullName>
            </value>
            <value>
                <fullName>Trust, Fiduciary, and Custody Activities</fullName>
            </value>
            <value>
                <fullName>Biotechnology</fullName>
            </value>
            <value>
                <fullName>Chemicals and Petrochemicals</fullName>
            </value>
            <value>
                <fullName>Chemicals and Plastics Wholesalers</fullName>
            </value>
            <value>
                <fullName>Petroleum Products Wholesalers</fullName>
            </value>
            <value>
                <fullName>Advertising, Marketing, and PR</fullName>
            </value>
            <value>
                <fullName>Architecture, Engineering and Design</fullName>
            </value>
            <value>
                <fullName>Concrete, Glass, and Building Materials</fullName>
            </value>
            <value>
                <fullName>Construction and Remodeling</fullName>
            </value>
            <value>
                <fullName>Construction Equipment and Supplies</fullName>
            </value>
            <value>
                <fullName>Facilities and Management Maintenance</fullName>
            </value>
            <value>
                <fullName>Hardware and Building Materials Dealers</fullName>
            </value>
            <value>
                <fullName>Lumber and Construction Materials Wholesalers</fullName>
            </value>
            <value>
                <fullName>Property Leasing and Management</fullName>
            </value>
            <value>
                <fullName>HR, Recruiting and Payroll Services</fullName>
            </value>
            <value>
                <fullName>Legal Services</fullName>
            </value>
            <value>
                <fullName>Management Consulting</fullName>
            </value>
            <value>
                <fullName>Sales Services</fullName>
            </value>
            <value>
                <fullName>Security Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>