force-app/main/default/objects/Account/fields/Territory_Manager__c.field-meta.xml
<CustomField>
    <fullName>Territory_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>[Peoplesoft or manual] - Name of Territoy Manager</description>
    <inlineHelpText>The user assigned as the current Territory Manager for this Institution.</inlineHelpText>
    <label>Territory Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>