force-app/main/default/objects/Account/fields/Twitter__c.field-meta.xml
<CustomField>
    <fullName>Twitter__c</fullName>
    <description>URL for the business account</description>
    <inlineHelpText>Twitter page for the business</inlineHelpText>
    <label>Twitter</label>
    <type>Url</type>
</CustomField>