force-app/main/default/objects/Account/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>[Salesforce] - look up to the user for the Corporate Relations Leads</description>
    <label>Corporate Relations Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>