force-app/main/default/objects/Account/recordTypes/External_Mastered_Contact.recordType-meta.xml
<RecordType>
    <fullName>External_Mastered_Contact</fullName>
    <active>true</active>
    <description>Reciprocal Account record that is updated from an external source; the system of record is an external database.</description>
    <label>External Mastered Contact</label>
</RecordType>