force-app/main/default/objects/Account/recordTypes/External_Mastered_Org.recordType-meta.xml
<RecordType>
    <fullName>External_Mastered_Org</fullName>
    <active>true</active>
    <description>Account record that is updated from an external source; the system of record is an external database.</description>
    <label>External Mastered Org</label>
</RecordType>