force-app/main/default/objects/Account/recordTypes/SF_Mastered_Contact.recordType-meta.xml
<RecordType>
    <fullName>SF_Mastered_Contact</fullName>
    <active>true</active>
    <description>Reciprocal Account record that exists only in Salesforce and is not updated from an external source</description>
    <label>SF Mastered Contact</label>
</RecordType>