force-app/main/default/objects/Account/recordTypes/SF_Mastered_Org.recordType-meta.xml
<RecordType>
    <fullName>SF_Mastered_Org</fullName>
    <active>true</active>
    <description>Account record that exists only in Salesforce and is not updated from an external source</description>
    <label>SF Mastered Org</label>
</RecordType>